--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/BUILD.bazel
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/BUILD.bazel
@@ -3,6 +3,8 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
+DEPS = []
+
 rust_library(
     name = "trustworthy_node_metrics_types",
     srcs = glob(["src/**/*.rs"]),
