--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/BUILD.bazel
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types/BUILD.bazel
@@ -3,9 +3,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-DEPS = [
-    "//rs/dre-canisters/node-provider-rewards-lib"
-]
+DEPS = []
 
 rust_library(
     name = "trustworthy_node_metrics_types",
