Update Cargo configuration to use workspace references and add missing dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -206,6 +206,7 @@ ic-cdk-timers = { git = "https://github.com/dfinity/cdk-rs.git", rev = "929fd0b3
 ic-cdk-macros = { git = "https://github.com/dfinity/cdk-rs.git", rev = "929fd0b31e9ec69aad7cf6285df0394f25fe1815" }
 ic-stable-structures = "0.6.8"
 dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+node-provider-rewards = { path = "rs/node-provider-rewards" }
 
 # dre-airflow deps, should be replaced with dre-airflow once
 indexmap = { version = "2.8.0", features = ["serde"] }
