--- a/rs/dre-canisters/node-provider-rewards/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/Cargo.toml
@@ -26,7 +26,7 @@ futures = { workspace = true }
 indexmap = { workspace = true }
 ic-base-types = { workspace = true }
 ic-management-canister-types-private = { workspace = true }
-ic-metrics-encoder = { version = "1.1.1" }
+ic-metrics-encoder = { workspace = true }
 ic-nervous-system-canisters = { workspace = true }
 ic-nervous-system-common = { workspace = true }
 ic-protobuf = { workspace = true }
