--- a/rs/node-provider-rewards/Cargo.toml
+++ b/rs/node-provider-rewards/Cargo.toml
@@ -8,15 +8,22 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
-ic-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+ic-cdk = { workspace = true }
+ic-types = { workspace = true }
+ic-base-types = { workspace = true }
 itertools = { workspace = true }
 num-traits = { workspace = true }
 rust_decimal = { workspace = true }
 rust_decimal_macros = { workspace = true }
 tabled = { workspace = true }
-chrono = { workspace = true }
-ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
+chrono = { version = "0.4.38", default-features = false, features = [
+    "alloc",
+    "clock",
+    "serde",
+] }
+candid = { workspace = true }
+serde = { workspace = true }
+ic-protobuf = { workspace = true }
 indexmap = { workspace = true }
 
 [lib]
