Improvements to release index checks.
* Leverage Github summaries.
* Move the CI check file **outside** of release-controller, where it does not belong because it's not part of the release controller.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,4 +36,5 @@ jobs:
       - name: Run checks for release index
         run: |
           rye sync
-          rye run python3 release-controller/ci_check.py --repo-path /home/runner/.cache
+          export PYTHONPATH=$PWD/release-controller
+          rye run python3 release_index_ci_check.py --repo-path /home/runner/.cache
