--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,11 +6,13 @@ on:
     paths-ignore:
       - "release-index.yaml"
       - "replica-releases/**"
+      - "release-controller/**"
       - "node-labels/**"
   pull_request:
     paths-ignore:
       - "release-index.yaml"
       - "replica-releases/**"
+      - "release-controller/**"
       - "node-labels/**"
   workflow_dispatch:
 
@@ -86,18 +88,6 @@ jobs:
           name: test-artifacts
           path: bazel-out/k8-opt/bin/rs/ic-observability/multiservice-discovery/multiservice-discovery
 
-      - name: "❓ Check if files that influence release controller changed in last commit"
-        id: check-release-controller-modified
-        uses: step-security/changed-files@v45
-        with:
-          files: |
-            release-controller/**
-            requirements*.lock
-            pyproject.toml
-            *.bazel
-            bazel/**
-            .github/**
-
       ########################################
       # Upload container images
       ########################################
@@ -110,16 +100,11 @@ jobs:
       - name: "📦 Push images to GitHub Container Registry"
         if: ${{ startsWith(github.head_ref, 'container') || startsWith(github.ref, 'refs/heads/container') || (github.ref == 'refs/heads/main') }}
         shell: bash
-        env:
-          RELEASE_CONTROLLER_CHANGED: ${{ steps.check-release-controller-modified.outputs.any_changed }}
         run: |
           set -ex -o pipefail
           oci_targets=$(bazel query --noshow_progress 'kind("oci_push", ...)')
-          if [ "$RELEASE_CONTROLLER_CHANGED" != "true" ]
-          then
-            # Oh, not changed?  Then skip pushing the release controller container images.
-            oci_targets=$(echo "$oci_targets" | grep -v //release-controller)
-          fi
+          # Oh, not changed?  Then skip pushing the release controller container images.
+          oci_targets=$(echo "$oci_targets" | grep -v //release-controller)
           echo "$oci_targets" | xargs -I_target bazel run _target -- --tag ${GITHUB_SHA}
 
       - name: "❓ Check if dashboard/* changed in last commit"
@@ -172,14 +157,6 @@ jobs:
           files-to-update: ${{ steps.paths.outputs.files }}
           push-token: ${{ secrets.K8S_API_TOKEN }}
           component: containers
-
-      - name: "🤖 Update k8s deployments for release controller"
-        if: ${{ github.ref == 'refs/heads/main' && steps.check-release-controller-modified.outputs.any_changed == 'true' }}
-        uses: ./.github/workflows/update-k8s-deployments
-        with:
-          files-to-update: bases/apps/ic-release-controller/controller/controller.yaml bases/apps/ic-release-controller/commit-annotator/commit-annotator.yaml
-          push-token: ${{ secrets.K8S_API_TOKEN }}
-          component: release controller
 
       ########################################
       # Clean up runner
