--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -7,7 +7,7 @@ on:
       - release-controller/**
       - requirements*.lock
       - pyproject.toml
-      - *.bazel
+      - "*.bazel"
       - bazel/**
       - .github/**
   pull_request:
@@ -15,7 +15,7 @@ on:
       - release-controller/**
       - requirements*.lock
       - pyproject.toml
-      - *.bazel
+      - "*.bazel"
       - bazel/**
       - .github/**
   workflow_dispatch:
