--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,10 +62,12 @@ jobs:
       - name: "🚀 Testing"
         env:
           STAGING_PRIVATE_KEY_PEM: "${{ secrets.STAGING_PRIVATE_KEY_PEM }}"
+        shell: bash
         run: |
+          set -e -o pipefail
           mkdir -p ~/.config/dfx/identity/bootstrap-super-leader/
           echo $STAGING_PRIVATE_KEY_PEM > ~/.config/dfx/identity/bootstrap-super-leader/identity.pem
-          bazel test ... --spawn_strategy=local --test_env=HOME=/home/runner
+          bazel query '... except //release-controller/...' | xargs bazel test --spawn_strategy=local --test_env=HOME=/home/runner
 
       # We don't need the linear-jira build and test step for now
       # - name: "🚀 Build and Test Linear-Jira with Bazel"
