--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -64,7 +64,7 @@ jobs:
           # See above where the token is generated: we can't use regular secrets.GITHUB_TOKEN
           # since the push needs to trigger actions again
           GITHUB_TOKEN: "${{ steps.app-token.outputs.token }}"
-          spec: //release-controller/...
+          spec: //release-controller/... except attr(name, '.*oci_image.*', //release-controller/...)
       - name: "🚀 Testing"
         shell: bash
         run: |
