--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -69,7 +69,9 @@ jobs:
         shell: bash
         run: |
           set -o pipefail
-          bazel query "//release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //release-controller/...)" | xargs bazel test --config=ci --spawn_strategy=local --test_env=HOME=/home/runner
+          t=$(mktemp) ; trap 'rm -f "$t"' EXIT
+          bazel query "//release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //release-controller/...)" > "$t"
+          bazel test --target_pattern_file="$t" --config=ci --spawn_strategy=local --test_env=HOME=/home/runner
 
       ########################################
       # Upload container images
