--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -71,7 +71,7 @@ jobs:
           t=$(mktemp) ; trap 'rm -f "$t"' EXIT
           bazel query "//release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //release-controller/...)" > "$t"
           set -x
-          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner
+          bazel test --target_pattern_file="$t" --config=ci --spawn_strategy=dynamic --test_env=HOME=/home/runner
 
       ########################################
       # Upload container images
