--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,7 +70,7 @@ jobs:
           t=$(mktemp) ; trap 'rm -f "$t"' EXIT
           bazel query "... except //release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //...)" > "$t"
           set -x
-          bazel test --target_pattern_file="$t" --config=ci --spawn_strategy=local --test_env=HOME=/home/runner
+          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner
 
       # We don't need the linear-jira build and test step for now
       # - name: "🚀 Build and Test Linear-Jira with Bazel"
