--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -72,6 +72,7 @@ jobs:
           bazel query "//release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //release-controller/...)" > "$t"
           set -x
           bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner
+          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner
 
       ########################################
       # Upload container images
