--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -68,11 +68,13 @@ jobs:
       - name: "🚀 Testing"
         run: |
           set -e
-          t=$(mktemp) ; trap 'rm -f "$t"' EXIT
+          t=$(mktemp) ; t2=$(mktemp) ; trap 'rm -f "$t" "$t2"' EXIT
           bazel query "//release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //release-controller/...)" > "$t"
           set -x
-          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner --check_up_to_date --check_tests_up_to_date
-          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner
+          r=0
+          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner --explain="$t2" --verbose_explanations || r=2
+          cat "$t2"
+          exit $r
 
       ########################################
       # Upload container images
