--- a/rs/cli/BUILD.bazel
+++ b/rs/cli/BUILD.bazel
@@ -45,7 +45,7 @@ rust_binary(
     name = "dre-embedded", # Variant does not have an embedded git revision, which permits caching of dependents.
     srcs = glob(["src/**/*.rs"]),
     aliases = aliases(),
-    rustc_env_files = [":generate_rustc_env_file_no_rev"],
+    rustc_env_files = [],
     proc_macro_deps = all_crate_deps(
         proc_macro = True,
     ),
@@ -91,12 +91,5 @@ genrule(
     name = "generate_rustc_env_file",
     outs = ["rustc_env_file"],
     cmd = "echo \"CARGO_PKG_VERSION=$$(awk '$$1 == \"RELEASE_VERSION\" {print $$2}' bazel-out/volatile-status.txt)-$$(awk '$$1 == \"GIT_REV\" {print $$2}' bazel-out/volatile-status.txt)\" > $@",
-    stamp = True,
-)
-
-genrule(
-    name = "generate_rustc_env_file_no_rev",
-    outs = ["rustc_env_file_no_rev"],
-    cmd = "echo \"CARGO_PKG_VERSION=$$(awk '$$1 == \"RELEASE_VERSION\" {print $$2}' bazel-out/volatile-status.txt)-n0rev1s1n\" > $@",
     stamp = True,
 )
