--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -73,7 +73,7 @@ jobs:
           set -x
           r=0
           bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner --explain="$t2" --verbose_explanations || r=2
-          cat "$t2"
+          # cat "$t2"
           exit $r
 
       ########################################
