--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -73,9 +73,9 @@ jobs:
           set -x
           r=0
           bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner --explain="$t2" --verbose_explanations || r=?
-          echo === Explanations === >&2
-          cat "$t2" >&2
-          echo == /Explanations === >&2
+          #echo === Explanations === >&2
+          #cat "$t2" >&2
+          #echo == /Explanations === >&2
           exit $r
 
       ########################################
