--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,6 +33,16 @@ jobs:
           state: "success"
           sha: ${{github.event.pull_request.head.sha || github.sha}}
 
+      - name: Mark bazel-release-controller as success # because it should not run if only release files changed
+        uses: Sibz/github-status-action@v1
+        if: ${{ steps.changed-files.outputs.all_changed_files_count > 0 && steps.changed-files.outputs.other_changed_files_count == 0  }}
+        with:
+          authToken: ${{secrets.GITHUB_TOKEN}}
+          context: "bazel-release-controller"
+          description: "Passed"
+          state: "success"
+          sha: ${{github.event.pull_request.head.sha || github.sha}}
+
       - name: Run checks for release index
         if: ${{ steps.changed-files.outputs.any_changed == 'true' }}
         run: |
