--- a/rs/cli/BUILD.bazel
+++ b/rs/cli/BUILD.bazel
@@ -41,6 +41,23 @@ rust_binary(
     compile_data = [ "src/assets/subnet_topic_map.json" ],
 )
 
+rust_binary(
+    name = "dre-embedded", # Variant does not have an embedded git revision, which permits caching of dependents.
+    srcs = glob(["src/**/*.rs"]),
+    aliases = aliases(),
+    rustc_env_files = [],
+    proc_macro_deps = all_crate_deps(
+        proc_macro = True,
+    ),
+    deps = all_crate_deps(
+        normal = True,
+    ) + DEPS + ["//rs/cli:dre-lib", ":build_script"],
+    data = [
+        "//:cordoned_features.yaml",
+    ],
+    compile_data = [ "src/assets/subnet_topic_map.json" ],
+)
+
 rust_library(
     name = "dre-lib",
     srcs = glob(["src/**/*.rs"]),
