Moved canister API and library in node-provider-rewards dir

--- a/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/Cargo.toml
@@ -34,7 +34,7 @@ ic-registry-canister-client = { workspace = true }
 ic-types = { workspace = true }
 mockall = { workspace = true }
 node-provider-rewards = { workspace = true }
-prost = { workspace = true }
+node-provider-rewards-api = { workspace = true }
 rust_decimal = { workspace = true }
 
 [dev-dependencies]
