--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,9 @@ members = [
     "rs/log-fetcher",
     "rs/canister-log-fetcher",
     "rs/slack-notifications",
-    "rs/node-provider-rewards",
-    "rs/dre-canisters/node-provider-rewards",
+    "rs/dre-canisters/node-provider-rewards/canister",
+    "rs/dre-canisters/node-provider-rewards/canister/api",
+    "rs/dre-canisters/node-provider-rewards/rewards-calculation",
     "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types",
     "rs/ic-observability/general-testnet-service-discovery",
 ]
@@ -206,7 +207,8 @@ ic-cdk-timers = { git = "https://github.com/dfinity/cdk-rs.git", rev = "929fd0b3
 ic-cdk-macros = { git = "https://github.com/dfinity/cdk-rs.git", rev = "929fd0b31e9ec69aad7cf6285df0394f25fe1815" }
 ic-stable-structures = "0.6.8"
 dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "2fe8aefafcb2fbee6fdb2785374d5de715560269" }
-node-provider-rewards = { path = "rs/node-provider-rewards" }
+node-provider-rewards = { path = "rs/dre-canisters/node-provider-rewards/rewards-calculation" }
+node-provider-rewards-api = { path = "rs/dre-canisters/node-provider-rewards/canister/api" }
 
 # dre-airflow deps, should be replaced with dre-airflow once
 indexmap = { version = "2.8.0", features = ["serde"] }
