--- a/rs/dre-canisters/node-provider-rewards/canister/api/BUILD.bazel
+++ b/rs/dre-canisters/node-provider-rewards/canister/api/BUILD.bazel
@@ -4,7 +4,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "api",
+    name = "node_provider_rewards_api",
     srcs = glob(["src/**/*.rs"]),
     aliases = aliases(),
     proc_macro_deps = all_crate_deps(
