--- a/rs/dre-canisters/node-provider-rewards/canister/api/BUILD.bazel
+++ b/rs/dre-canisters/node-provider-rewards/canister/api/BUILD.bazel
@@ -4,7 +4,8 @@ load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "node-provider-rewards",
+    name = "api",
+    crate_name = "node_provider_rewards_api",
     srcs = glob(["src/**/*.rs"]),
     aliases = aliases(),
     proc_macro_deps = all_crate_deps(
@@ -12,20 +13,5 @@ rust_library(
     ),
     deps = all_crate_deps(
         normal = True,
-    ),
-)
-
-rust_test(
-    name = "unit_test",
-    aliases = aliases(
-        normal_dev = True,
-        proc_macro_dev = True,
-    ),
-    crate = ":node-provider-rewards",
-    proc_macro_deps = all_crate_deps(
-        proc_macro_dev = True,
-    ),
-    deps = all_crate_deps(
-        normal_dev = True,
     ),
 )
