Reform Github checks
* Simplify the release index checks.  It no longer attempts to mark actions as successful, because those actions are run when pertinent.
* Add an additional `paths-ignore` entry in the relevant places, based on the release index checks paths.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,12 +8,14 @@ on:
       - "replica-releases/**"
       - "release-controller/**"
       - "node-labels/**"
+      - "facts-db/**"
   pull_request:
     paths-ignore:
       - "release-index.yaml"
       - "replica-releases/**"
       - "release-controller/**"
       - "node-labels/**"
+      - "facts-db/**"
   workflow_dispatch:
 
 concurrency:
