--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,6 +8,7 @@ on:
       - "release-controller/**"
       - "node-labels/**"
       - "facts-db/**"
+      - .github/**
   workflow_dispatch:
 
 jobs:
