--- a/.github/workflows/required-checks.yaml
+++ b/.github/workflows/required-checks.yaml
@@ -3,7 +3,7 @@ on:
   workflow_run:
     workflows: ["Build and test", "Release controller"]
     types:
-      - completed
+      - requested
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
