--- a/.github/workflows/required-checks.yaml
+++ b/.github/workflows/required-checks.yaml
@@ -1,32 +1,26 @@
 name: Required checks
 on:
   workflow_run:
-    workflows: ["Build and test", "Release controller"]
+    workflows:
+      - Build and test
+      - Release controller
     types:
-      - requested
+      - completed
 
 concurrency:
   group: ${{ github.workflow }}-required-checks-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  verify:
-    runs-on:
-      labels: dre-runner-custom
-    # This image is based on ubuntu:20.04
-    container: ghcr.io/dfinity/dre/actions-runner:6413f2909a49329ecbf5371ee7ddf07a9799b625
+  on-success:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Wait for bazel to succeed
-        uses: lewagon/wait-on-check-action@v1.3.4
-        with:
-          ref: ${{ github.ref }}
-          check-name: bazel
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 10
-      - name: Wait for Release controller pipeline to succeed
-        uses: lewagon/wait-on-check-action@v1.3.4
-        with:
-          ref: ${{ github.ref }}
-          check-name: bazel-release-controller
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          wait-interval: 10
+      - run: |
+          echo 'The triggering workflow passed' >&2
+  on-failure:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+    steps:
+      - run: |
+          echo 'The triggering workflow failed' >&2 && false
