--- a/.github/workflows/required-checks.yaml
+++ b/.github/workflows/required-checks.yaml
@@ -1,31 +1,19 @@
 name: Required checks
 on:
-  workflow_run:
-    workflows:
-      - Build and test
-      - Release controller
-    types:
-      - completed
+  pull_request: {}
 
 concurrency:
   group: ${{ github.workflow }}-required-checks-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  unconditional:
+  wait-for-checks:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo 'The triggering workflow triggered' >&2
-  on-success:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    steps:
-      - run: |
-          echo 'The triggering workflow passed' >&2
-  on-failure:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-    steps:
-      - run: |
-          echo 'The triggering workflow failed' >&2 && false
+      - name: Wait for other checks to succeed
+        uses: lewagon/wait-on-check-action@v1.3.4
+        with:
+          ref: ${{ github.ref }}
+          running-workflow-name: "Release controller"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          wait-interval: 10
