--- a/rs/dre-canisters/node-provider-rewards/canister/api/Cargo.toml
+++ b/rs/dre-canisters/node-provider-rewards/canister/api/Cargo.toml
@@ -8,8 +8,17 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+ic-base-types = { workspace = true }
+rust_decimal = { workspace = true }
+rewards-calculation = { workspace = true }
 candid = { workspace = true }
 serde = { workspace = true }
+derive_more = "0.99"
+chrono = { version = "0.4.38", default-features = false, features = [
+    "alloc",
+    "clock",
+    "serde",
+] }
 
 [lib]
 name = "node_provider_rewards_api"
