--- a/.github/workflows/required-checks.yaml
+++ b/.github/workflows/required-checks.yaml
@@ -24,14 +24,14 @@ jobs:
       - name: Wait for release controller pipeline
         uses: lewagon/wait-on-check-action@v1.3.4
         with:
-          ref: ${{ github.sha }}
+          ref: ${{ github.ref }}
           check-name: bazel-release-controller
           repo-token: "${{ steps.app-token.outputs.token }}"
           wait-interval: 10
       - name: Wait for build and test
         uses: lewagon/wait-on-check-action@v1.3.4
         with:
-          ref: ${{ github.sha }}
+          ref: ${{ github.ref }}
           check-name: bazel
           repo-token: "${{ steps.app-token.outputs.token }}"
           wait-interval: 10
