--- a/rs/dre-canisters/node-provider-rewards/canister/api/BUILD.bazel
+++ b/rs/dre-canisters/node-provider-rewards/canister/api/BUILD.bazel
@@ -3,12 +3,16 @@ load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
 
 package(default_visibility = ["//visibility:public"])
 
+DEPS = [
+    "//rs/dre-canisters/node-provider-rewards/rewards-calculation",
+]
+
 rust_library(
     name = "api",
     crate_name = "node_provider_rewards_api",
     srcs = glob(["src/**/*.rs"]),
     aliases = aliases(),
-    proc_macro_deps = all_crate_deps(
+    proc_macro_deps = DEPS + all_crate_deps(
         proc_macro = True,
     ),
     deps = all_crate_deps(
