--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -73,6 +73,7 @@ jobs:
           echo $STAGING_PRIVATE_KEY_PEM > ~/.config/dfx/identity/bootstrap-super-leader/identity.pem
           t=$(mktemp) ; trap 'rm -f "$t"' EXIT
           bazel query "... except //release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //...)" > "$t"
+          if [ "$(stat -c %s "$t")" == "0" ] ; then echo No testing targets found >&2 ; exit 0 ; fi
           set -x
           bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner
 
